# seft

./: .clang-format  .clang-tidy  .gitignore  LICENSE  Makefile  Makefile.am  README.rst  configure  configure.ac  docker-compose.yml  seft.c  sftp.c
.github/workflows/: c-cpp.yml
inc/: config.h  debug.h  sftp_client.h  sftp_utils.h
include/: attr_list.h  commands.h  config.h  debug.h  seft_client.h  seft_debug.h  seft_path.h  seft_utils.h  sftp_ansi_colors.h  sftp_client.h  sftp_list.h  sftp_path.h  sftp_utils.h
src/: attr_list.c  commands.c  config.h  seft_client.c  seft_list.c  seft_path.c  seft_utils.c  sftp_client.c  sftp_list.c  sftp_path.c  sftp_utils.c
